[package]
name = "cgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["cargo", "derive"] }
dirs = "5.0.1"
regex = "1.10.2"

[package.metadata.scripts]
install = "cargo build --package cgit --release && sudo cp ../target/release/cgit /usr/local/bin"

[[bin]]
name = "cgit"
path = "src/main.rs"
